--- a/package.yaml
+++ b/package.yaml
@@ -15,12 +15,22 @@ dependencies:
   - stm
   - strict-wrapper
 
+ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wnoncanonical-monad-instances -Wredundant-constraints
+
 library:
   source-dirs: src
   when:
   - condition: false
     other-modules: Paths_benign # substitute name with the package name
-ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wnoncanonical-monad-instances -Wredundant-constraints
 
-# For executables:
-# -threaded -rtsopts -with-rtsopts=-N
+executables:
+  simple-print:
+    source-dirs: examples
+    main: SimplePrint.hs
+    dependencies:
+      - benign
+    when:
+    - condition: false
+      other-modules: Paths_benign # substitute name with the package # name
+  # doesn't parse, I'll figure out why later
+  # ghc-options: -threaded -rtsopts -with-rtsopts=-N
