Don't build haskell-language-server in CI

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,6 +4,7 @@ env:
   # Bump this number to invalidate the Github-actions cache
   cache-invalidation-key: 0
   nixpkgs-url: https://github.com/NixOS/nixpkgs/archive/7f9be6a505a31f88499c5d20d11f98accf5ae6ba.tar.gz
+  nix-cmd: nix-shell --pure --arg withDevTools "false" --run
 
 jobs:
   ormolu:
@@ -20,9 +21,9 @@ jobs:
         # If you chose API tokens for write access OR if you have a private cache
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
     - name: Build Nix dependencies
-      run: nix-shell --pure --run "echo '=== Nix dependencies installed ==='"
+      run: ${{ env.nix-cmd }} "echo '=== Nix dependencies installed ==='"
     - name: Check formatting
-      run: nix-shell --pure --run 'just format check'
+      run: ${{ env.nix-cmd }} 'just format check'
 
   test:
     name: stack build
@@ -44,6 +45,6 @@ jobs:
         key: stack-deps-${{ runner.os }}-${{ hashFiles('nix/sources.json') }}-v${{ env.cache-invalidation-key }}-${{ hashFiles('stack.yaml.lock', 'benign.cabal') }}-${{ github.sha }}
         restore-keys: stack-deps-${{ runner.os }}-${{ hashFiles('nix/sources.json') }}-v${{ env.cache-invalidation-key }}-${{ hashFiles('stack.yaml.lock', 'benign.cabal') }}-
     - name: Build Nix dependencies
-      run: nix-shell --pure --run "echo '=== Nix dependencies installed ==='"
+      run: ${{ env.nix-cmd }} "echo '=== Nix dependencies installed ==='"
     - name: Build
-      run: nix-shell --pure --run "stack build --pedantic --test"
+      run: ${{ env.nix-cmd }} "stack build --pedantic --test"
