An attempt at making benign effects available in monadic code

--- a/benign.cabal
+++ b/benign.cabal
@@ -35,6 +35,7 @@ library
     , deepseq
     , stm
     , strict-wrapper
+    , transformers
   default-language: Haskell2010
 
 executable simple-print
@@ -50,4 +51,5 @@ executable simple-print
     , deepseq
     , stm
     , strict-wrapper
+    , transformers
   default-language: Haskell2010
