--- a/package.yaml
+++ b/package.yaml
@@ -14,6 +14,7 @@ dependencies:
   - deepseq
   - stm
   - strict-wrapper
+  - transformers
 
 ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wnoncanonical-monad-instances -Wredundant-constraints
 
