--- a/benign.cabal
+++ b/benign.cabal
@@ -1,13 +1,13 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.35.0.
+-- This file has been generated from package.yaml by hpack version 0.38.0.
 --
 -- see: https://github.com/sol/hpack
 
 name:           benign
 version:        0.1.0
 synopsis:       A library for benign effects
-description:    see README.md.
+description:    See the Benign library.
 homepage:       https://github.com/aspiwack/haskell-benign#readme
 bug-reports:    https://github.com/aspiwack/haskell-benign/issues
 author:         Arnaud Spiwack
