--- a/backends/katip/benign-katip.cabal
+++ b/backends/katip/benign-katip.cabal
@@ -1,12 +1,12 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.35.0.
+-- This file has been generated from package.yaml by hpack version 0.38.0.
 --
 -- see: https://github.com/sol/hpack
 
 name:           benign-katip
 version:        0.1.0
-synopsis:       A library for benign effects
+synopsis:       A Benign backend for the Katip library
 description:    see README.md.
 homepage:       https://github.com/aspiwack/haskell-benign#readme
 bug-reports:    https://github.com/aspiwack/haskell-benign/issues
