--- a/backends/timestats/package.yaml
+++ b/backends/timestats/package.yaml
@@ -4,8 +4,8 @@ author: Arnaud Spiwack
 maintainer: arnaud@spiwack.net
 github: aspiwack/haskell-benign
 copyright: MIT
-synopsis: A library for benign effects
-description: see README.md.
+synopsis: A Benign backend for the Timestats library
+description: See the Benign library.
 
 dependencies:
   - base
