--- a/backends/timestats/benign-timestats.cabal
+++ b/backends/timestats/benign-timestats.cabal
@@ -13,6 +13,7 @@ bug-reports:    https://github.com/aspiwack/haskell-benign/issues
 author:         Arnaud Spiwack
 maintainer:     arnaud@spiwack.net
 copyright:      MIT
+license:        MIT
 build-type:     Simple
 
 source-repository head
@@ -26,7 +27,7 @@ library
       src
   ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wnoncanonical-monad-instances -Wredundant-constraints
   build-depends:
-      base
+      base <4.22
     , benign
     , timestats
   default-language: Haskell2010
