--- a/backends/timestats/package.yaml
+++ b/backends/timestats/package.yaml
@@ -4,11 +4,12 @@ author: Arnaud Spiwack
 maintainer: arnaud@spiwack.net
 github: aspiwack/haskell-benign
 copyright: MIT
+license: MIT
 synopsis: A Benign backend for the Timestats library
 description: See the Benign library.
 
 dependencies:
-  - base
+  - base < 4.22
   - benign
   - timestats
 
