--- a/benign.cabal
+++ b/benign.cabal
@@ -30,7 +30,7 @@ library
   ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wnoncanonical-monad-instances -Wredundant-constraints
   build-depends:
       async
-    , base
+    , base <4.22
     , containers
     , deepseq
     , stm
@@ -44,7 +44,7 @@ executable simple-print
   ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wnoncanonical-monad-instances -Wredundant-constraints
   build-depends:
       async
-    , base
+    , base <4.22
     , benign
     , containers
     , deepseq
